--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Task-PayU</string>
     <string name="action_settings">Credits</string>
     <string name="view_project">View Project</string>
+    <string name="desc_project_image">Project image</string>
 </resources>
